# wait-for-gh-rate-limit

./: CHANGELOG.md  Cargo.toml  README.md  mise.toml
.github/workflows/: release-plz.yml  release.yml  test.yml
mise-tasks/: release-plz
src/: main.rs
