[package]
name = "wait-for-gh-rate-limit"
version = "0.1.2"
edition = "2021"
authors = ["Jeff Dickey (@jdx)"]
description = "CLI that waits for GitHub rate limit to reset if you're out of requests"
documentation = "https://github.com/jdx/wait-for-gh-rate-limit"
repository = "https://github.com/jdx/wait-for-gh-rate-limit"
homepage = "https://github.com/jdx/wait-for-gh-rate-limit"
license = "MIT"

[dependencies]
chrono = "0.4.38"
humantime = "2.1.0"
reqwest = {version = "0.12", features = ["json"]}
serde = { version = "1.0.215", features = ["derive"] }
tokio = {version = "1", features = ["full"]}

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
