[package]
name = "wait-for-gh-rate-limit"
version = "1.0.0"
edition = "2024"
authors = ["Jeff Dickey (@jdx)"]
description = "CLI that waits for GitHub rate limit to reset if you're out of requests"
documentation = "https://github.com/jdx/wait-for-gh-rate-limit"
repository = "https://github.com/jdx/wait-for-gh-rate-limit"
homepage = "https://github.com/jdx/wait-for-gh-rate-limit"
license = "MIT"

[dependencies]
chrono = "0.4"
humantime = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
